--- a/templates/upload.html
+++ b/templates/upload.html
@@ -2,13 +2,81 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload Image</title>
+    <style>
+        body {
+            font-family: cursive;
+            background-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            margin: 0;
+            padding: 30px;
+        }
+        .header {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        h2 {
+            color: #221616;
+            margin: 0;
+            font-size: 2.5em;
+        }
+        .container {
+            background: white;
+            padding: 30px;
+            border-radius: 7px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            width: 400px;
+            height: 200px;
+        }
+        h1 {
+            color: #333;
+            margin: 20px;
+        }
+        p {
+            text-align: left; /* Aligns text to the left */
+            margin: 0px 5px; /* Removes default margin */
+        }
+        input[type="file"] {
+            margin: 10px;
+            width: 100%;
+        }
+        input[type="submit"] {
+            background-color: #28a745;
+            color: white;
+            border: none;
+            padding: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            width: 100%;
+        }
+        input[type="submit"]:hover {
+            background-color: #218838;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Upload an Image</h1>
-    <form method="POST" enctype="multipart/form-data">
-        <input type="file" name="file">
-        <input type="submit" value="Upload">
-    </form>
+    <div class="header">
+        <h2>Food Recommendation for Next Meal</h2>
+    </div>
+    <img src="{{ url_for('image', filename='cov.png') }}" alt="Description of image" width="250" height="300">
+    <div class="container">
+        <h1>Upload an Image</h1>
+        <p>First Meal</p> 
+        <form method="POST" action="/" enctype="multipart/form-data">
+            <input type="file" name="file" accept="image/*" required>
+            <input type="submit" value="Upload">
+        </form>
+    </div>
 </body>
 </html>
